# cabal-refact

./: .gitignore  .stylish-haskell.yaml  .travis.yml  README.md  Setup.lhs  cabal-refact.cabal  stack.yaml
cli/: Main.hs
fixtures/identity/: cabal-refact.cabal  fake-deps.cabal  md2sht.cabal  uniform-pair.cabal
fixtures/increase-revision/: cabal-refact.cabal  cabal-refact.cabal.output  focus.cabal.output  focus2.cabal  focus2.cabal.output
fixtures/populate-extra-source-files/: cabal-refact.cabal  cabal-refact2.cabal  cabal-refact2.cabal.output
fixtures/set-version/: cabal-refact.cabal  cabal-refact.cabal.output  focus.cabal  focus.cabal.output  focus2.cabal
src/Distribution/: Refact.hs
src/Distribution/Refact/: Annotations.hs  Parser.hs  Pretty.hs
src/Distribution/Refact/Internal/: Prelude.hs
src/Distribution/Refact/Refactoring/: Identity.hs  IncreaseRevision.hs  PopulateExtraSourceFiles.hs  SetVersion.hs
src/Distribution/Refact/Tools/: Edit.hs  Pretty.hs  Trifecta.hs
src/Distribution/Refact/Tools/Edit/: Algorithm.hs
src/Distribution/Refact/Types/: Pos.hs  Refactoring.hs  Structure.hs  Version.hs
tests/: Tests.hs  doctests.hsc
