name:           cabal-refact
version:        0
synopsis:       Refactor tool for .cabal files
description:    Refactor tool for .cabal files, supporting among all things the build-depends editing.
category:       Web
homepage:       https://github.com/phadej/cabal-refact#readme
bug-reports:    https://github.com/phadej/cabal-refact/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.0.1
build-type:     Custom
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md
    README.md
    -- cabal-refact-populate: fixtures/**/*.*
    fixtures/identity/Agda.cabal
    fixtures/identity/JuicyPixels.cabal
    fixtures/identity/QuickCheck.cabal
    fixtures/identity/adjunctions.cabal
    fixtures/identity/aeson.cabal
    fixtures/identity/arithmoi.cabal
    fixtures/identity/bound.cabal
    fixtures/identity/cabal-refact.cabal
    fixtures/identity/doctest.cabal
    fixtures/identity/fake-deps.cabal
    fixtures/identity/free.cabal
    fixtures/identity/hackage-cli.cabal
    fixtures/identity/haddock.cabal
    fixtures/identity/hashable.cabal
    fixtures/identity/haxl.cabal
    fixtures/identity/lens.cabal
    fixtures/identity/md2sht.cabal
    fixtures/identity/recursion-schemes.cabal
    fixtures/identity/scientific.cabal
    fixtures/identity/servant-mock.cabal
    fixtures/identity/stack.cabal
    fixtures/identity/stylish-haskell.cabal
    fixtures/identity/these.cabal
    fixtures/identity/uniform-pair.cabal
    fixtures/identity/unordered-containers.cabal
    fixtures/identity/vector-algorithms.cabal
    fixtures/identity/vector.cabal
    fixtures/increase-revision/cabal-refact.cabal
    fixtures/increase-revision/cabal-refact.cabal.output
    fixtures/increase-revision/focus.cabal
    fixtures/increase-revision/focus.cabal.output
    fixtures/increase-revision/focus2.cabal
    fixtures/increase-revision/focus2.cabal.output
    fixtures/populate-extra-source-files/cabal-refact.cabal
    fixtures/populate-extra-source-files/cabal-refact.cabal.output
    fixtures/populate-extra-source-files/cabal-refact2.cabal
    fixtures/populate-extra-source-files/cabal-refact2.cabal.output
    fixtures/set-version/cabal-refact.cabal
    fixtures/set-version/cabal-refact.cabal.output
    fixtures/set-version/focus.cabal
    fixtures/set-version/focus.cabal.output
    fixtures/set-version/focus2.cabal
    fixtures/set-version/focus2.cabal.output

source-repository head
  type: git
  location: https://github.com/phadej/aeson-compat

custom-setup
  setup-depends:
    base >= 4 && <5,
    Cabal,
    cabal-doctest >= 1 && <1.1

-- Comment
library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends: base      >=4.9    && <4.10,
      ansi-wl-pprint,
      bytestring,
      composition-extra == 2.0.*,
      directory,
      filepath,
      indentation-trifecta == 0.0.1,
      lens >=4.15.1 && <4.16,
      mtl >= 2.2.1 && <2.3,
      parsers   >=0.12.4 && <0.13,
      Glob,
      regex-applicative,
      regex-applicative-text,
      semigroupoids,
      text,
      these,
      trifecta  >=1.6.1  && <1.7,
      vector >=0.11 && <0.13
  exposed-modules:
      Distribution.Refact
      Distribution.Refact.Internal.Prelude
      Distribution.Refact.Annotations
      Distribution.Refact.Parser
      Distribution.Refact.Pretty
      Distribution.Refact.Refactoring.Identity
      Distribution.Refact.Refactoring.IncreaseRevision
      Distribution.Refact.Refactoring.PopulateExtraSourceFiles
      Distribution.Refact.Refactoring.SetVersion
      Distribution.Refact.Tools.Edit
      Distribution.Refact.Tools.Edit.Algorithm
      Distribution.Refact.Tools.Pretty
      Distribution.Refact.Tools.Trifecta
      Distribution.Refact.Types.Pos
      Distribution.Refact.Types.Refactoring
      Distribution.Refact.Types.Structure
      Distribution.Refact.Types.Version
  default-language: Haskell2010
  other-extensions:
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    GeneralizedNewtypeDeriving
    ScopedTypeVariables
    TupleSections

executable cabal-refact
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs : cli
  build-depends:
    base,
    cabal-refact,
    filepath,
    text,
    optparse-applicative == 0.13.*

test-suite doctests
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  build-depends:
    base,
    directory,
    filepath,
    doctest >= 0.11 && <0.12

test-suite tests
  default-language: Haskell2010
  type            : exitcode-stdio-1.0
  main-is         : Tests.hs
  hs-source-dirs  : tests
  build-depends:
    base,
    cabal-refact,
    directory,
    filepath,
    text,
    tasty,
    tasty-hunit
